# cli-code-test-evolution

./: .gitignore  README.md  code-test-evo-report.html  pyproject.toml  roadmap-tp-pr-debt.md
.github/workflows/: tests.yml
cli_code_test_evolution/: analyzer.py  github_client.py  line_counter.py  main.py  models.py  reporter.py  repository_parser.py  scanner.py
pr_debt_scanner/: analyzer.py  github_client.py  line_counter.py  main.py  models.py  reporter.py  repository_parser.py  scanner.py
tests/: test_analyzer.py  test_github_client.py  test_line_counter.py  test_main.py  test_reporter.py  test_repository_parser.py  test_scanner.py
