# pyproject.toml
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-code-test-evolution"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "PyGithub>=2.3",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "unidiff>=0.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
code-test-evo = "cli_code_test_evolution.main:app"
